--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,13 @@
 
 
 <body class="theme-dark-premium">
+    <div id="globalLoader">
+  <div class="spinner"></div>
+  <p>טוען נתונים...</p>
+</div>
+
+<!-- התוכן שלך -->
+<div id="pageContent" style="display:none">
   <h1>משמרת ערב - הזנת משימות</h1>
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
@@ -92,5 +99,6 @@
 <script src="/js/ui-enhance.js" defer></script>
 
   <script src="/js/script.js"></script>
+  </div>
 </body>
 </html>
