--- a/views/manage.html
+++ b/views/manage.html
@@ -61,9 +61,9 @@
       <button type="submit" class="btn btn--primary">טען משמרת</button>
       <button id="go-back" class="btn btn--primary">חזור אחורה</button>
       <div class="manage_btn" style="display: flex;justify-content: center;">
-        <span id="leadChip" class="lead-chip" style="display:none;"><span class="dot"></span>אחמ״ש: —</span>
-        <span id="status" class="lead-chip" style="display:none;"><span class="dot"></span>סטטוס: —</span>
-        <span id="createdByChip" class="lead-chip" style="display:none;"><span class="dot"></span>נוצר ע״י: —</span>
+        <span id="leadChip man" class="lead-chip" style="display:none;"><span class="dot"></span>אחמ״ש: —</span>
+        <span id="status man" class="lead-chip" style="display:none;"><span class="dot"></span>סטטוס: —</span>
+        <span id="createdByChip man" class="lead-chip" style="display:none;"><span class="dot"></span>נוצר ע״י: —</span>
       </div>
     </form>
 
