--- a/public/css/style.css
+++ b/public/css/style.css
@@ -535,7 +535,7 @@ margin: 30px auto;
   margin-top: 9px;
 }
 
-#man{
+.man{
       background-color: var(--btn-primary);
     color: #0E0E0E;
     border-radius: 14px;
