--- a/views/manage.html
+++ b/views/manage.html
@@ -62,7 +62,7 @@
       <button id="go-back" class="btn btn--primary">חזור אחורה</button>
       <div class="manage_btn" style="display: flex;justify-content: center;">
         <span id="leadChip" class="lead-chip" style="display:none;background-color: var(--btn-primary);color: #0E0E0E;border-radius: 14px;margin-left: 5px;text-align: center;"><span class="dot"></span>אחמ״ש: —</span>
-        <span id="statusman" class="lead-chip" style="display:none;background-color: var(--btn-primary);color: #0E0E0E;border-radius: 14px;margin-left: 5px;text-align: center;"><span class="dot"></span>סטטוס: —</span>
+        <span id="status" class="lead-chip" style="display:none;background-color: var(--btn-primary);color: #0E0E0E;border-radius: 14px;margin-left: 5px;text-align: center;"><span class="dot"></span>סטטוס: —</span>
         <span id="createdByChip" class="lead-chip" style="display:none;background-color: var(--btn-primary);color: #0E0E0E;border-radius: 14px;margin-left: 5px;text-align: center;"><span class="dot"></span>נוצר ע״י: —</span>
       </div>
     </form>
