--- a/views/manage.html
+++ b/views/manage.html
@@ -69,7 +69,10 @@
 
     <div id="shiftSection" style="display:none;">
       <h2>משימות</h2>
-      <form id="updateForm"></form>
+<form id="updateForm">
+  <div id="tabs"></div>
+  <div id="tasksContainer"></div>
+</form>
 
       <section id="runtimeNotesSection">
         
