--- a/views/manage.html
+++ b/views/manage.html
@@ -127,7 +127,7 @@
     </div>
   </div>
   <script src="/js/global.js"></script>
-  <script src="/js/manage.js"></script>
+  <script src="/js/manage.js" defer></script>
 <script src="/js/ui-enhance.js" defer></script>
 </div>
 </body>
