--- a/views/manage.html
+++ b/views/manage.html
@@ -66,10 +66,8 @@
     <div id="shiftSection" style="display:none;">
       <h2>משימות</h2>
 <form id="updateForm">
-  <div id="tabs"></div>
-  <div id="tasksContainer"></div>
+  <div id="categories"></div>
 </form>
-
       <section id="runtimeNotesSection">
         
   <h3>הערות בזמן המשמרת</h3>
