--- a/views/manage.html
+++ b/views/manage.html
@@ -53,7 +53,7 @@
 
     <form id="loadForm">
       <label>בחר תאריך משמרת:</label>
-      <input style="max-width: 550px;" type="date" name="date" required>
+      <input type="date" name="date" required>
       <button type="submit" class="btn btn--primary">טען משמרת</button>
       <button id="go-back" class="btn btn--primary">חזור אחורה</button>
       <div class="manage_btn" style="display: flex;justify-content: center;">
