--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -5,9 +5,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NEW DELI • ניהול ספקים</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link rel="stylesheet" href="/css/style.css?v=2" />
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
-  <script src="https://unpkg.com/lucide@latest"></script>
+  
   
 </head>
 <body>
@@ -21,7 +22,7 @@
       <span class="brand-title">NEW DELI</span>
       <div class="brandbar-right">
         <button id="notifToggle" class="icon-btn">
-          <i data-lucide="bell-off"></i>
+          <i id="notifIcon" style="font-size: 20px;" class="fa-solid fa-bell"></i>
         </button>
         <span class="burger" id="burger">&#9776;</span>
         <button id="themeToggle" class="icon-btn">🌙/☀️</button>
