--- a/views/tasks.html
+++ b/views/tasks.html
@@ -6,8 +6,9 @@
 
 
   <title>ניהול משימות</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://unpkg.com/lucide@latest"></script>
+
 
   <link rel="stylesheet" href="/css/style.css?v=2" />
   
@@ -161,7 +162,7 @@
   <span class="brand-title">NEW DELI</span>
   <div class="brandbar-right">
     <button id="notifToggle" class="icon-btn">
-      <i data-lucide="bell-off"></i>
+      <i id="notifIcon" style="font-size: 20px;" class="fa-solid fa-bell"></i>
     </button>
     <span class="burger" id="burger">&#9776;</span>
 <button id="themeToggle" class="icon-btn">🌙/☀️</button>
