--- a/views/admin.html
+++ b/views/admin.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NEW DELI • דף מנהל</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css?v=2" />
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#2b5329">
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
-  <script src="https://unpkg.com/lucide@latest"></script>
+  
   <script defer src="/js/admin.js"></script>
   <script defer src="/js/global.js"></script>
 </head>
@@ -25,7 +26,7 @@
       <span class="brand-title">NEW DELI</span>
       <div class="brandbar-right">
         <button id="notifToggle" class="icon-btn">
-          <i data-lucide="bell-off"></i>
+          <i id="notifIcon" style="font-size: 20px;" class="fa-solid fa-bell"></i>
         </button>
         <span class="burger" id="burger">&#9776;</span>
         <button id="themeToggle" class="icon-btn">🌙/☀️</button>
