--- a/views/index.html
+++ b/views/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>ניהול משמרת ערב</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
-<script src="https://unpkg.com/lucide@latest"></script>
+
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/css/style.css">
@@ -29,7 +30,7 @@
   <span class="brand-title">NEW DELI</span>
   <div class="brandbar-right">
     <button id="notifToggle" class="icon-btn">
-      <i data-lucide="bell-off"></i>
+      <i id="notifIcon" style="font-size: 20px;" class="fa-solid fa-bell"></i>
     </button>
     <span class="burger" id="burger">&#9776;</span>
 <button id="themeToggle" class="icon-btn">🌙/☀️</button>
