--- a/views/manage.html
+++ b/views/manage.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NEW DELI • ניהול משמרת</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link rel="stylesheet" href="/css/style.css?v=2">
-  <script src="https://unpkg.com/lucide@latest"></script>
+  
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#2b5329">
@@ -21,7 +22,7 @@
     <header class="brandbar">
       <span class="brand-title">NEW DELI</span>
       <div class="brandbar-right">
-        <button id="notifToggle" class="icon-btn"><i data-lucide="bell-off"></i></button>
+        <button id="notifToggle" class="icon-btn"><i id="notifIcon" style="font-size: 20px;" class="fa-solid fa-bell"></i></button>
         <span class="burger" id="burger">&#9776;</span>
         <button id="themeToggle" class="icon-btn">🌙/☀️</button>
       </div>
