--- a/views/admin.html
+++ b/views/admin.html
@@ -53,10 +53,10 @@
 
       <div class="admin-controls" style="margin: auto; max-width: 75%;">
         <input type="date" id="filterDate" />
-        <input type="text" id="searchName" placeholder="חפש לפי שם עובד" />
-        <button type="button" id="btnFilterDate">סנן תאריך</button>
-        <button type="button" id="btnSearchName">חפש עובד</button>
-        <button type="button" id="btnResetFilters">נקה סינון</button>
+        <input type="text" id="searchName" style="margin-top: 5px;" placeholder="חפש לפי שם עובד" />
+        <button type="button" style="margin-top: 10px;" id="btnFilterDate">סנן תאריך</button>
+        <button type="button" style="margin-top: 10px;" id="btnSearchName">חפש עובד</button>
+        <button type="button" style="margin-top: 10px;" id="btnResetFilters">נקה סינון</button>
       </div>
 
       <div id="shiftsContainer"></div>
