--- a/views/home.html
+++ b/views/home.html
@@ -181,7 +181,7 @@ h1.app-title {
 
 <!-- התוכן שלך -->
 <div id="pageContent" style="display:none">
-<header class="brandbar">
+   <header class="brandbar">
   <div class="brandbar-right">
     <a href="/profile" class="nav-item">
       <i class="fa-solid fa-user"></i>
@@ -193,7 +193,7 @@ h1.app-title {
       <span>התראות</span>
     </a>
 
-    <a href="/" class="nav-item home-btn">
+    <a href="/" class="nav-item">
       <i class="fa-solid fa-house"></i>
       <span>בית</span>
     </a>
@@ -215,10 +215,16 @@ h1.app-title {
     <i class="fa-solid fa-user"></i>
     <span>פרופיל</span>
   </a>
-  <a href="/notifications" class="nav-item">
+  <!-- <a href="/notifications" class="nav-item">
     <i class="fa-solid fa-bell"></i>
     <span>התראות</span>
   </a>
+   -->
+  <a id="notifToggle" class="icon-btn nav-item">
+    <i id="notifIcon" style="font-size: 20px;" class="fa-solid fa-bell"></i>
+    <span>התראות</span>
+  </a>
+  
   <a href="/" class="nav-item home-btn">
     <i class="fa-solid fa-house"></i>
     <span>בית</span>
@@ -227,8 +233,8 @@ h1.app-title {
     <i class="fa-solid fa-gear"></i>
     <span>הגדרות</span>
   </a>
-  <a href="/menu" class="nav-item">
-    <i class="fa-solid fa-bars"></i>
+  <a class="nav-item" href="#">
+    <i id="burger" class="fa-solid fa-bars"></i>
     <span>תפריט</span>
   </a>
 </nav>
