--- a/views/home.html
+++ b/views/home.html
@@ -208,37 +208,6 @@ h1.app-title {
 </nav>
 <!-- התוכן שלך -->
 <div id="pageContent" style="display:none">
-   <header class="brandbar">
-  <div class="brandbar-right">
-    <a href="/profile" class="nav-item">
-      <i class="fa-solid fa-user"></i>
-      <span>פרופיל</span>
-    </a>
-
-    <a href="/notifications" class="nav-item">
-      <i class="fa-solid fa-bell"></i>
-      <span>התראות</span>
-    </a>
-
-    <a href="/" class="nav-item">
-      <i class="fa-solid fa-house"></i>
-      <span>בית</span>
-    </a>
-
-    <a href="/settings" class="nav-item">
-      <i class="fa-solid fa-gear"></i>
-      <span>הגדרות</span>
-    </a>
-
-    <a href="/menu" class="nav-item">
-      <i class="fa-solid fa-bars"></i>
-      <span>תפריט</span>
-    </a>
-  </div>
-</header>
-
-
-
 
 <nav class="mobile-nav" id="mobileNav">
   <!-- <button style="display: none;" id="closeNav" class="close-btn">✖</button>  -->
@@ -256,7 +225,7 @@ h1.app-title {
   <button id="closeNav" class="close-btn">✖</button> 
 </nav>
 <div class="container">
-  <h1 class="app-title" id="user">ברוכים הבאים למערכת ניהול משמרות</h1>
+  <h1 class="app-title" id="user">ברוכים הבאים</h1>
   <p class="subtitle">בחרו פעולה כדי להתחיל 👇</p>
 
   <div class="nav-grid">
