--- a/views/tasks.html
+++ b/views/tasks.html
@@ -61,15 +61,17 @@
 
 .tasks-table {
   width: 100%;
+  max-width: 500px;   /* קובע מקסימום */
+  margin: 0 auto;     /* מרכז */
   border-collapse: collapse;
-  direction: rtl;
 }
+
 
 .tasks-table th,
 .tasks-table td {
-  padding: 10px;
-  border-bottom: 1px solid rgba(255,255,255,0.1);
-  text-align: right;
+  padding: 10px 16px;
+  text-align: center;
+  white-space: nowrap; /* לא לשבור שורה */
 }
 
 .tasks-table th {
@@ -157,64 +159,6 @@
 
 </style>
 
-
-  <header class="brandbar">
-  <div class="brandbar-right">
-    <a href="/profile" class="nav-item">
-      <i class="fa-solid fa-user"></i>
-      <span>פרופיל</span>
-    </a>
-
-    <a href="/notifications" class="nav-item">
-      <i class="fa-solid fa-bell"></i>
-      <span>התראות</span>
-    </a>
-
-    <a href="/" class="nav-item home-btn">
-      <i class="fa-solid fa-house"></i>
-      <span>בית</span>
-    </a>
-
-    <a href="/settings" class="nav-item">
-      <i class="fa-solid fa-gear"></i>
-      <span>הגדרות</span>
-    </a>
-
-    <a href="/menu" class="nav-item">
-      <i class="fa-solid fa-bars"></i>
-      <span>תפריט</span>
-    </a>
-  </div>
-</header>
-
-<nav class="bottom-nav">
-  <a href="/profile" class="nav-item">
-    <i class="fa-solid fa-user"></i>
-    <span>פרופיל</span>
-  </a>
-  <!-- <a href="/notifications" class="nav-item">
-    <i class="fa-solid fa-bell"></i>
-    <span>התראות</span>
-  </a>
-   -->
-  <a id="notifToggle" class="icon-btn nav-item">
-    <i id="notifIcon" style="font-size: 20px;" class="fa-solid fa-bell"></i>
-    <span>התראות</span>
-  </a>
-  
-  <a href="/" class="nav-item home-btn">
-    <i class="fa-solid fa-house"></i>
-    <span>בית</span>
-  </a>
-  <a href="/settings" class="nav-item">
-    <i class="fa-solid fa-gear"></i>
-    <span>הגדרות</span>
-  </a>
-  <a class="nav-item">
-    <i  id="burger" class="fa-solid fa-bars"></i>
-    <span>תפריט</span>
-  </a>
-</nav>
 
 
 <nav class="mobile-nav" id="mobileNav">
