--- a/views/admin.html
+++ b/views/admin.html
@@ -336,14 +336,7 @@
     <div class="spinner"></div>
     <p>טוען נתונים...</p>
   </div>
-        <div id="shiftsContainer">
-          <div class="shift-card">
-            <div class="shift-meta">📅 2025-09-18 (חמישי) | צוות: יוסי, דנה | אחמ״ש: רועי</div>
-            <div class="shift-actions">
-              <button>הצג / ערוך</button>
-            </div>
-          </div>
-        </div>
+          <div id="shiftsContainer" style="display:none;"></div>
       </section>
 <section class="card" id="page-users">
   <h2>📊 ניהול משתמשים</h2>
