--- a/views/admin.html
+++ b/views/admin.html
@@ -332,10 +332,18 @@
     <div class="admin-pages">
       <section id="page-shifts" class="active">
 				
-  <div id="loadingShifts" class="loading">
-    <div class="spinner"></div>
-    <p>טוען נתונים...</p>
+<div id="loadingShifts">
+  <div class="skeleton-card">
+    <div class="skeleton skeleton-line" style="width: 60%;"></div>
+    <div class="skeleton skeleton-line" style="width: 40%;"></div>
+    <div class="skeleton skeleton-line" style="width: 80%;"></div>
   </div>
+  <div class="skeleton-card">
+    <div class="skeleton skeleton-line" style="width: 70%;"></div>
+    <div class="skeleton skeleton-line" style="width: 50%;"></div>
+    <div class="skeleton skeleton-line" style="width: 90%;"></div>
+  </div>
+</div>
           <div id="shiftsContainer" style="display:none;"></div>
       </section>
 <section class="card" id="page-users">
