--- a/views/profile-edit.html
+++ b/views/profile-edit.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/profile.css">
   <link rel="stylesheet" href="/css/style.css">
-
+ <link rel="icon" href="/icons/icon-512.png" type="image/png">
 </head>
 <body>
   <div class="edit-card">
