--- a/views/profile.html
+++ b/views/profile.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/profile.css" />
   <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-
+ <link rel="icon" href="/icons/icon-512.png" type="image/png">
 </head>
 <body>
 
