--- a/views/unauthorized.html
+++ b/views/unauthorized.html
@@ -5,6 +5,7 @@
   <title>אין הרשאה</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" href="/icons/icon-512.png" type="image/png">
   <style>
     body {
       margin: 0;
